# template-securite-python

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/: config.py
src/tp1/: README.md  hold_main.py  main.py
src/tp1/utils/: capture.py  config.py  lib.py  report.py
src/tp2/: README.md  main.py
src/tp2/utils/: ai.py  disasm.py  emulate.py  io.py  model.py  strings.py
src/tp3/: main.py
src/tp3/utils/: captcha.py  config.py  session.py
tests/tp1/utils/: test_lib.py
